--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
+    "react-router-bootstrap": "^0.20.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "sass-loader": "^3.1.2",
